[gd_scene load_steps=4 format=3 uid="uid://omexrlllgk5v"]

[ext_resource type="Script" uid="uid://bljmj7uyy685d" path="res://components/scene_managers/settings_manager.gd" id="1_46duy"]
[ext_resource type="PackedScene" uid="uid://dgi3541b0t7ph" path="res://objects/GameCamera.tscn" id="1_i47rn"]
[ext_resource type="PackedScene" uid="uid://dyafskg3ggf6v" path="res://objects/Environment.tscn" id="2_46duy"]

[node name="Settings" type="Node3D"]
script = ExtResource("1_46duy")

[node name="GameCamera" parent="." instance=ExtResource("1_i47rn")]

[node name="WorldEnvironment" parent="." instance=ExtResource("2_46duy")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="CheckButton" type="CheckButton" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Absolute Aiming"

[node name="Label4" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Mouse Sensitivity"
horizontal_alignment = 1

[node name="MouseSlider" type="HSlider" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.25
max_value = 1.5
step = 0.01
value = 0.5

[node name="Label" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Aim Sensitivity"
horizontal_alignment = 1

[node name="AimSlider" type="HSlider" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 20.0
step = 0.2
value = 5.0

[node name="Label2" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
min_value = -20.0
max_value = 12.0

[node name="Label3" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
min_value = -20.0
max_value = 12.0

[node name="BackButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 555.0
offset_top = 522.0
offset_right = 715.0
offset_bottom = 553.0
text = "BACK"

[connection signal="toggled" from="Control/ScrollContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="value_changed" from="Control/ScrollContainer/VBoxContainer/MouseSlider" to="." method="_on_mouse_slider_value_changed"]
[connection signal="value_changed" from="Control/ScrollContainer/VBoxContainer/AimSlider" to="." method="_on_aim_slider_value_changed"]
[connection signal="value_changed" from="Control/ScrollContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Control/ScrollContainer/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
